完善资源结构

--- a/error_pages/404ErrorPage.html
+++ b/error_pages/404ErrorPage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>服务器错误</title>
+    <title>404错误，当前页面不存在</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel='icon' href='../images/Favicon.png'>
+    <link rel='icon' href='../sources/logo/balloons.png'>
     <style>
         * {
             margin: 0;
