--- a/error_pages/DatabaseErrorPage.html
+++ b/error_pages/DatabaseErrorPage.html
@@ -3,7 +3,7 @@
 <head>
     <title>服务器错误</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel='icon' href='../images/Favicon.png'>
+    <link rel='icon' href='../sources/logo/balloons.png'>
     <style>
         * {
             margin: 0;
@@ -67,10 +67,10 @@
             padding: 0.8em 1.5em;
             border-radius: 99999px;
             background-image: linear-gradient(to top, #32C983, #25F193);
-            box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2), inset 0px -2px 5px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), inset 0 -2px 5px 0 rgba(0, 0, 0, 0.2);
             border: none;
             cursor: pointer;
-            text-shadow: 0px 1px #343434;
+            text-shadow: 0 1px #343434;
             color: white;
             text-transform: uppercase;
             letter-spacing: 1.5pt;
