--- a/参考/Upload_Video.html
+++ b/参考/Upload_Video.html
@@ -50,7 +50,7 @@
 							</li>
 							<li class="user-log">
 								<div class="user-ac-img">
-									<img class="avatar" src="../sources/avatar/user-img.jpg" alt="">
+									<img class="avatar" src="../sources/avatar/user-img.png" alt="">
 								</div>
 								<div class="account-menu">
 									<h4>AZYRUSMAX <span class="usr-status">PRO</span></h4>
